fixed nav-menu-list spacing

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -66,7 +66,8 @@ h1 {
 
 
 #side-bar-expand {
-  display: block;
+  display: flex;
+  flex-direction: column;
   position: absolute;
   right: 0px;
   top: 0px;
@@ -77,8 +78,6 @@ h1 {
   transition: width .15s;
   white-space: nowrap;
 }
-
-
 
 
 
@@ -113,11 +112,13 @@ h1 {
 
 
 #nav-menu-list {
+  
+  height: 100%;
+  display: flex;
   display: flex;
   flex-direction: column;
-  height: 100%;
-
-  margin-top: 2.5em;
+  margin-top: 0em;
+  margin-bottom: 20em;
   align-items: center;
   list-style-type:none;
   justify-content: space-around;
